# upgraded-octo-giggle

./: .gitignore  .gitreview  .zuul.yaml  Dockerfile  Makefile.am  README.md  README.rst  bindep.txt  bootstrap.sh  configure.ac  go.mod  go.sum  main.go  vhost.conf
m4/: opendev_canonical.m4  opendev_optimize.m4  opendev_warnings.m4  pandora_have_libcpprest.m4  pandora_optimize.m4  pandora_vc_build.m4  pandora_warnings.m4  require_libcpprest.m4  zuul_canonical.m4
playbooks/: distcheck.yaml
zuul-preview/: main.cc
